<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/colorBackground"
              tools:context="com.example.lewis.weather.WeatherActivity" tools:ignore="MissingDefaultResource">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">

        <TextView
                android:id="@+id/city_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/city_country"
                android:textSize="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/colorWhite"/>

        <TextView
                android:id="@+id/current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/date_today"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorWhite"/>

        <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="245dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/sun"
                android:layout_marginTop="@dimen/_24sdp"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_gravity="center_horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_16sdp"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="16sp"
                        android:layout_gravity="end"
                        android:textStyle="bold"
                        android:text="@string/temperature"/>

                <TextView
                        android:id="@+id/weather_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/current_temperature"/>


                <TextView
                        android:id="@+id/weather_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/weather_information"/>

                <TextView
                        android:id="@+id/min_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/min_temp"/>

                <TextView
                        android:id="@+id/max_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/max_temp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/wind"/>

                <TextView
                        android:id="@+id/wind_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/wind_speed"/>

                <TextView
                        android:id="@+id/wind_direction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/wind_direction"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                <ImageButton
                        android:id="@+id/add_location"
                        android:layout_width="91dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:elevation="@dimen/_4sdp"
                        android:layout_marginTop="130dp"
                        android:src="@drawable/settings1"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_16sdp"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="16sp"
                        android:layout_gravity="end"
                        android:textStyle="bold"
                        android:text="@string/humidity"/>

                <TextView
                        android:id="@+id/humidity_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/humidity_rate"/>

                <TextView
                        android:layout_width="81dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="16sp"
                        android:layout_gravity="end"
                        android:textStyle="bold"
                        android:text="@string/sunrise"/>

                <TextView
                        android:id="@+id/sunrise_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/sunrise_time"/>


                <TextView
                        android:layout_width="77dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSubTitle"
                        android:textSize="16sp"
                        android:layout_gravity="end"
                        android:textStyle="bold"
                        android:text="@string/sunset"/>

                <TextView
                        android:id="@+id/sunset_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_horizontal"
                        android:textSize="14sp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/sunset_time"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorBottomBackground"
            android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/weather_daily_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:scrollbars="none"/>

    </LinearLayout>

</LinearLayout>
